--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "aos": "^2.3.4",
     "axios": "^1.4.0",
     "chart.js": "^4.4.1",
     "country-state-city": "^3.2.1",
